scripts/nullaway/wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8.txt
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRS.java:61: error: [NullAway] dereferenced expression vehicleGroups is @Nullable
            for (int i = 0; i < vehicleGroups.size(); i++) {
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:130: error: [NullAway] dereferenced expression startDate is @Nullable
        if (b == null || pc == null || startDate.after(endDate))
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:144: error: [NullAway] dereferenced expression r.getStartDate() is @Nullable
                        if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:144: error: [NullAway] dereferenced expression endDate is @Nullable
                        if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:144: error: [NullAway] dereferenced expression r.getEndDate() is @Nullable
                        if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                                                                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:161: error: [NullAway] dereferenced expression startDate is @Nullable
        if (c == null || b == null || vg == null || startDate.after(endDate))
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:170: error: [NullAway] dereferenced expression vg.getModel() is @Nullable
            for (LicenseClass lc : c.getLicenses()) if (lc == vg.getModel().getRequiredLicense())
                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:183: error: [NullAway] dereferenced expression r.getStartDate() is @Nullable
                    if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:183: error: [NullAway] dereferenced expression endDate is @Nullable
                    if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:183: error: [NullAway] dereferenced expression r.getEndDate() is @Nullable
                    if (r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime()) {
                                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:191: error: [NullAway] passing @Nullable parameter 'endDate' where @NonNull is required
            Rental r = new Rental(startDate, endDate, selectedVehicle, c);
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:193: error: [NullAway] dereferenced expression selectedVehicle is @Nullable
            System.out.println(c.toString() + "just rent:\n" + selectedVehicle.toString() + ":\n" + r.toString() + "\n");
                                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:153: error: [NullAway] dereferenced expression openingTime is @Nullable
        return "--------Branch--------\n" + name + "\n" + address + "\nFrom " + openingTime.toString() + " to " + closingTime.toString() + "\nPhone: " + phone + "----------------------\n";
                                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:153: error: [NullAway] dereferenced expression closingTime is @Nullable
        return "--------Branch--------\n" + name + "\n" + address + "\nFrom " + openingTime.toString() + " to " + closingTime.toString() + "\nPhone: " + phone + "----------------------\n";
                                                                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:74: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(3, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:92: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(3, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:96: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(2, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:100: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(2, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:118: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(0, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:160: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(3, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:182: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(3, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/test/CRSOperationsTest.java:204: error: [NullAway] dereferenced expression vgs is @Nullable
        assertEquals(3, vgs.size());
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/test/PersonTest.java:84: error: [NullAway] dereferenced expression e.getCause() is @Nullable
            exceptionMessage = e.getCause().getMessage();
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/test/PersonTest.java:99: error: [NullAway] dereferenced expression e.getCause() is @Nullable
            exceptionMessage = e.getCause().getMessage();
                                           ^
    (see http://t.uber.com/nullaway )
24 errors
